底层变动日志

1.1.3

添加锁定触摸事件的api
iOS的openUDID被缓存到UserDefaults中
Android上websoket主动关闭连接时不再回调close事件,其他平台测试后再修改
脚本支持所有图片资源的加密