@@ -1,4 +1,4 @@
-底层变动日志
+变动日志
 
 1.1.3
 
@@ -6,3 +6,4 @@
 iOS的openUDID被缓存到UserDefaults中
 Android上websoket主动关闭连接时不再回调close事件,其他平台测试后再修改
 脚本支持所有图片资源的加密
+Android上完善CCLuaJavaBridge的功能,支持java特殊参数的传入及返回(ArrayList,HashMap,Vector)
